--- a/admin/config.yml
+++ b/admin/config.yml
@@ -7,14 +7,14 @@ publish_mode: editorial_workflow
 
 media_folder: "/assets/img/uploads" # Media files will be stored in the repo under images/uploads
 
-collections:
-  - name: "posts" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
+collections: # A list of collections the CMS should be able to edit
+  - name: "post" # Used in routes, e.g., /admin/collections/:slug/edit
+    label: "New Post" # Used in the UI, e.g., "New Post"
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    delete: true
     slug: "{{project_name}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string", required: true}
       - {label: "Tags", name: "tags", widget: "string",  required: true}
       - {label: "Thumbnail", name: "thumbnail",  widget: "image", required: true}
+      - {label: "Body", name: "body", widget: "markdown"}
