--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,16 +5,19 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "/assets/img/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "static/images/uploads" # Media files will be stored in the repo under images/uploads
+public_folder: "/images/uploads"
 
 collections: # A list of collections the CMS should be able to edit
   - name: "post" # Used in routes, e.g., /admin/collections/:slug/edit
     label: "New Post" # Used in the UI, e.g., "New Post"
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{project_name}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string", required: true}
-      - {label: "Tags", name: "tags", widget: "string",  required: true}
+      - {label: "Tags", name: "tags", widget: "list",  required: true}
+      - {label: Terminos, name: terms, widget: list, default: ['Laravel', 'Vue']}
       - {label: "Thumbnail", name: "thumbnail",  widget: "image", required: true}
       - {label: "Body", name: "body", widget: "markdown"}
