--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,7 +17,6 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string", required: true}
-      - {label: "Tags", name: "tags", widget: "list",  required: true}
-      - {label: Terminos, name: terms, widget: list, default: ['Laravel', 'Vue']}
+      - {label: "Tags", name: "tags", "string"  required: true}
       - {label: "Thumbnail", name: "thumbnail",  widget: "image", required: true}
       - {label: "Body", name: "body", widget: "markdown"}
