--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ collections:
   videos:
   portafolios:
 
-plugins: [jekyll-paginate]
+plugins:
+  - jekyll-paginate
+  - jekyll-gist
+  
 paginate: 5
 paginate_path: "/blog/page:num/"
