--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,8 @@
 backend:
   name: git-gateway
+  accept_roles: #optional - accepts all users if left out
+    - admin
+    - editor
   repo: ismaeldevmw/runcoding # Path to your Github repository
   branch: master # Branch to update (optional; defaults to master)
 
