--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,25 +15,27 @@ collections: # A list of collections the CMS should be able to edit
     label: "Blog" # Used in the UI
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-      - {label: "Title", name: "title", widget: "string", required: true}
-      - {label: "Tags", name: "tags", widget: "list", default: ["Dev", "UX", "Design"], required: true}
-      - {label: "Publish Date", name: "date", widget: "datetime", required: true}
-      - {label: "Featured Image", name: "thumbnail", widget: "image", required: true}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: 'Code', name: 'code', widget: 'code'}
       - {label: "Permalink", name: "permalink", widget: "hidden", default: "/:title"}
+      - {label: "Title", name: "title", widget: "string", required: true}
+      - {label: "Tags", name: "tags", widget: "list", default: ["webdev"], required: true}
+      - {label: "Publish Date", name: "date", widget: "date", required: true}
+      - {label: "Featured Image", name: "thumbnail", widget: "image", required: true}
+      - {label: "Content Table" , name: "toc", default: true, required: true }
+      - {label: "Body", name: "body", widget: "markdown"}
   - name: "cursos" # Used in routes, e.g., /admin/collections/:slug/edit
     label: "Cursos" # Used in the UI
     folder: "_cursos" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-      - {label: "Featured Image", name: "thumbnail",  widget: "image", required: true}
+      - {label: "Permalink", name: "permalink", widget: "hidden", default: "/:title"}
       - {label: "Title", name: "title", widget: "string", required: true}
+      - {label: "Featured Image", name: "thumbnail",  widget: "image", required: true}
       - {label: "Description", name: "description", widget: "text", required: true}
-      - {label: "Price", name: "price", widget: "string", required: true}   
-      - {label: "Link", name: "link", widget: "string", required: true}
+      - {label: "Price", name: "price", widget: "string", required: true}
+      - {label: "Body", name: "body", widget: "markdown"}
+
