--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,7 +15,7 @@ collections: # A list of collections the CMS should be able to edit
     label: "Blog" # Used in the UI
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: {{year}}-{{month}}-{{day}}-{{slug} # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: {{year}}-{{month}}-{{day}}-{{slug}} # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Permalink", name: "permalink", widget: "hidden", default: "/:title"}
