--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,15 +15,15 @@ collections: # A list of collections the CMS should be able to edit
     label: "Blog" # Used in the UI
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: {{year}}-{{month}}-{{day}}-{{slug}} # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Permalink", name: "permalink", widget: "hidden", default: "/:title"}
-      - {label: "Title", name: "title", widget: "string", required: true}
-      - {label: "Tags", name: "tags", widget: "list", default: ["webdev"], required: true}
-      - {label: "Publish Date", name: "date", widget: "date", required: true}
-      - {label: "Featured Image", name: "thumbnail", widget: "image", required: true}
-      - {label: "Content Table", name: "toc", widget: "select", options: ["true", "false"], default: true, required: true}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Tags", name: "tags", widget: "list", default: ["webdev"]}
+      - {label: "Publish Date", name: "date", widget: "date"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Content Table", name: "toc", widget: "select", options: ["true", "false"], default: true}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "cursos" # Used in routes, e.g., /admin/collections/:slug/edit
     label: "Cursos" # Used in the UI
@@ -33,9 +33,9 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Permalink", name: "permalink", widget: "hidden", default: "/:title"}
-      - {label: "Title", name: "title", widget: "string", required: true}
-      - {label: "Featured Image", name: "thumbnail",  widget: "image", required: true}
-      - {label: "Description", name: "description", widget: "text", required: true}
-      - {label: "Price", name: "price", widget: "string", required: true}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Featured Image", name: "thumbnail",  widget: "image"}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Price", name: "price", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
 
