--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,7 +23,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Tags", name: "tags", widget: "list", default: ["webdev"]}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Content Table", name: "toc", widget: "select", options: ["true", "false"], default: true}
+      - {label: "Content Table", name: "toc", widget: "select", options: [true, false], default: true}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "cursos" # Used in routes, e.g., /admin/collections/:slug/edit
     label: "Cursos" # Used in the UI
