:heavy_plus_sign: jekyll-youtube added
New dependency created

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ plugins:
   - jekyll-gist
   - jekyll-toc 
   - jekyll-codepen
+  - jekyll-youtube
   
 paginate: 6
 paginate_path: "/blog/page:num/"
