--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,5 @@ plugins:
   - jekyll-codepen
   - jekyll-youtube
   
-paginate: 6
-paginate_path: "/blog/page:num/"
+paginate: 9
+paginate_path: "/blog/:num/"
