--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,7 +18,7 @@ collections: # A list of collections the CMS should be able to edit
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-      - {label: "Permalink", name: "permalink", widget: "hidden", default: "/:title"}
+      - {label: "Permalink", name: "permalink", widget: "hidden", default: "/blog/:title"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Tags", name: "tags", widget: "list", default: ["webdev"]}
       - {label: "Publish Date", name: "date", widget: "date"}
